plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id 'com.google.dagger.hilt.android'
    id 'kotlin-kapt'
}

android {
    namespace 'com.casic.titan.demo'
    compileSdk project.COMPILE_SDK_VERSION

    defaultConfig {
        applicationId "com.casic.titan.demo"
        minSdk project.MIN_SDK_VERSION
        targetSdk project.TARGET_SDK_VERSION
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        multiDexEnabled true
        ndk {
            // On x86 devices that run Android API 23 or above, if the application is targeted with API 23 or
            // above, FFmpeg lib might lead to runtime crashes or warnings.
            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86'
        }
        javaCompileOptions {
            annotationProcessorOptions {
                arguments += ["foo": "bar"]
            }
        }
    }

    buildTypes {
        release {
            buildConfigField "boolean", "LOG_DEBUG", "false"// 不显示log
            minifyEnabled true// 混淆
            zipAlignEnabled true// Zipalign优化
            shrinkResources true // 移除无用的resource
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
        debug {
            buildConfigField "boolean", "LOG_DEBUG", "true"// 显示log
            minifyEnabled false// 混淆
            zipAlignEnabled false// Zipalign优化
            shrinkResources false // 移除无用的resource
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    dataBinding {
        //noinspection DataBindingWithoutKapt
        enabled = true
    }
    dexOptions {
        javaMaxHeapSize "4g"
    }

    kotlinOptions {
        jvmTarget = '17'
    }
    composeOptions {
        kotlinCompilerExtensionVersion '1.4.3'
    }
}

dependencies {
    constraints {
        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
        }
        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
        }
    }
    api fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
    implementation "androidx.core:core-ktx:$coreKtxVersion"
    implementation platform("org.jetbrains.kotlin:kotlin-bom:$kotlinBomVersion")
    implementation "androidx.appcompat:appcompat:$appcompatVersion"
    implementation "com.google.android.material:material:$materialVersion"
    testImplementation "junit:junit:4.13.2"
    androidTestImplementation "androidx.test.ext:junit:1.1.3"
    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoCoreVersion"
    implementation "androidx.constraintlayout:constraintlayout:$constraintlayoutVersion"
    implementation project(':common')
    implementation project(':userapi')
    implementation project(':usercomponent')
    implementation project(':mqttcomponent')
    implementation project(':wscomponent')
    implementation "com.github.bumptech.glide:glide:$glideVersion"
    implementation "com.geyifeng.immersionbar:immersionbar:$immersionbarVersion"

    implementation "com.google.dagger:hilt-android:$hiltVersion"
    annotationProcessor "com.google.dagger:hilt-android-compiler:$hiltVersion"
    kapt "com.google.dagger:hilt-android-compiler:$hiltVersion"

    implementation "androidx.core:core-splashscreen:$splashscreenVersion"
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation "androidx.navigation:navigation-fragment:$navigationVersion"
    implementation "androidx.navigation:navigation-ui:$navigationVersion"
    implementation "com.tencent:mmkv:$mmkvVersion"
    implementation "io.reactivex.rxjava3:rxandroid:$rxandroidVersion"
    implementation "io.reactivex.rxjava3:rxjava:$rxjavaVersion"
    implementation "com.google.code.gson:gson:$gsonVersion"
    implementation "io.github.scwang90:refresh-layout-kernel:$refresh_layout_version"

    implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.11"
    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
    implementation "io.reactivex.rxjava3:rxandroid:$rxandroidVersion"
    implementation "io.reactivex.rxjava3:rxjava:$rxjavaVersion"

}